# operating-systems-hw

./: CMakeLists.txt  README.md
01/: hello.c
02/: echo_file.c  echo_file_sys_call.c
03/: homework3.sh  instructions.txt
04/: instructions.txt  terminal.c
05/: instructions.txt
